[project]
name = "hargarumah"
version = "0.1.0"
description = "Indonesian property price scraper — collects house/apartment listings from major real estate websites given GPS coordinates and radius."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Browser automation (stealth, CDP-based)
    "nodriver>=0.38",

    # Geocoding & distance calculations
    "geopy>=2.4",

    # Configuration
    "pyyaml>=6.0",

    # Data validation & models
    "pydantic>=2.0",

    # Async SQLite
    "aiosqlite>=0.20",

    # Console output & logging
    "rich>=13.0",

    # CSV/Excel export
    "openpyxl>=3.1",

    # HTTP for free proxy fetching
    "httpx>=0.27",

    # Environment variables
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
